fixed video opacity on spash screen and adjusted spacing on homepage

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,25 @@
 #siteVideo {
   position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
+/*  right: 0;
+  bottom: 0;*/
+  top:0;
+  left:0;
+  width:100%;
+  height:auto;
+/*  min-width: 100%;
+  min-height: 100%;*/
+}
+
+#topbar{
+  z-index:100;
+  opacity:.7;
 }
 
 
-
 #dropzone {
-    border : 5px dashed lightgrey;
+    border : 5px dashed white;
     border-width: 5px;
+    background-color: grey;
     width: 200px;
     height: 200px;
     text-align: center; 
@@ -18,8 +27,16 @@
     margin-right: 300px;
 
 }
+
+
+#dropImageTag{
+  color:white;
+  vertical-align: center;
+  text-align: center;
+
+}
 #upload{
-  margin-top:15px;
+  margin-top:50px;
 }
 
 #img_submit{
@@ -60,7 +77,7 @@
 
 #blank-space{
   /* blank top space on homepage*/
-  height: 200px;
+  height: 150px;
   /*color:grey;*/
   margin-left:25px;
   margin-right: 25px;
